--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,7 @@ Header
 	padding: 0px;
 	height: inherit;
 	font-family: 'Orbitron', sans-serif;
-    font-size: 23px;
+    /* font-size: 23px; */
 	font-weight: bold;
 	text-transform: uppercase;
 	padding: 5px;
